--- a/frontend/homepage.html
+++ b/frontend/homepage.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <title>meme</title>
+    <title>Tri-lo</title>
     <style>
     body {
-        background-color: gray;
+        background-color: #363232;
     }
     /* Remove the navbar's default margin-bottom and rounded borders */ 
     .navbar {
@@ -36,56 +36,55 @@
   </head>
   <body>
 	<style>
-	.container {
-  	position: absolute;
-  	text-align: center;
-    color: white;
-    top: 0%;
-    left: 0%;
-	}
-	.centered {
-  	position: absolute;
-  	top: 30%;
-  	left: 50%;
-  	transform: translate(-50%, -50%);
-    font-size: 100px;
-    color: white;
-    font-family: Impact, Charcoal, sans-serif;
-	}
-  .form-inline {
-  position: absolute;
-  text-align: center;
-  margin:0;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  }
-  .jumbotron {
-  padding: 0px;
-  }
-	</style>
+    .container {
+      position: absolute;
+      text-align: center;
+      color: white;
+      top: 0%;
+      left: 0%;
+    }
+    .centered {
+      position: absolute;
+      top: 30%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 100px;
+      color: white;
+      font-family: Impact, Charcoal, sans-serif;
+    }
+    .form-inline {
+    position: absolute;
+    text-align: center;
+    margin:0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    }
+    .jumbotron {
+    padding: 0px;
+    }
+    </style>
     
     <nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
-      </button>
-      <a class="navbar-brand" href="#">Tri-lo</a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-        <li><a href="#">Signup</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>                        
+          </button>
+          <a class="navbar-brand" href="#">Tri-lo</a>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
     <div class="jumbotron jumbotron-fluid text-center">
       <img src="https://i.imgur.com/S7cTEgw.png" alt ="sis-man on the clock" style="width:100%;">
@@ -101,12 +100,12 @@
     </div>
     
 
-    <h1 style="text-align: center">"o-boyo I have no where to live-o, thank god Tri-lo has me covered!"
+    <h1 style="text-align: center; color: white;">"o-boyo I have no where to live-o, thank god Tri-lo has me covered!"
       <br> - Definitely Real Student, 2020</h1>
-    <p style="text-align: center">Insert Witty Slogan Here...</p>
+    <p style="text-align: center; color: white;">Insert Witty Slogan Here...</p>
 
-      <footer class="container-fluid text-center">
-      <p>Contact us at: 1-800-RPI-SUCC<br>Copyright 2020</p>
+      <footer class="container-fluid text-center" style="background: #222222">
+      <p>Contact us at: 1-800-RPI-SUCC<br>Copyright 2020 Soon (tm)</p>
     </footer>
   </body>
 </html>
