--- a/frontend/login.html
+++ b/frontend/login.html
@@ -64,16 +64,16 @@
             <a class="nav-link" href="#">Login <span class="sr-only">(current)</span></a>
         </div>
     </nav>
-    <div class="card mb-3 col-auto centered" style="position:absolute; width: 50%; height: 60%; left:25%; margin-top: 5%;">
-        <div style="text-align: center; font-size: 36px;"> Log in to Tri-Lo</div>
+    <div class="card mb-3 col-auto centered" style="position:absolute; width: 50%; left:25%; margin-top: 5%;">
+        <div class="font-weight-bold" style="text-align: center; font-size: 36px; padding: 8%">Log in to Tri-Lo</div>
         <div class= "form-row align-items-center">
-            <label for="username">Username/Email address</label>
+            <label for="username">Username/Email Address</label>
             <div style="width: 100%;">
-                <input type="text" class="form-control mb-2" id="username" placeholder="username/email">
+                <input type="text" class="form-control mb-2" id="username" placeholder="">
             </div>
             <label for="password">Password</label>
             <div style="width: 100%;">
-                <input type="text" class="form-control mb-2" id="password" placeholder="password">
+                <input type="password" class="form-control mb-2" id="password" placeholder="">
             </div>
         </div>
         <a href="#" class="btn btn-dark" style="width: 100%">Login</a>
