--- a/frontend/login.html
+++ b/frontend/login.html
@@ -14,7 +14,7 @@
         <style>
             body {
                 background-color: #363232;
-                background-image: url(https://news.rpi.edu/sites/default/files/Campus-145%20%28003%29.jpg);
+                background-image: url(https://rpiathletics.com/images/2020/6/30/Campus.jpg?width=1920&quality=80&format=jpg);
             }
             /* Remove the navbar's default margin-bottom and rounded borders */ 
             .navbar {
