--- a/frontend/login.html
+++ b/frontend/login.html
@@ -64,7 +64,7 @@
             <a class="nav-link" href="#">Login <span class="sr-only">(current)</span></a>
         </div>
     </nav>
-    <div class="card mb-3 col-auto centered" style="position:absolute; width: 50%; left:25%; margin-top: 5%;">
+    <div class="card mb-3 col-auto centered" style="position: absolute; width: 28%; left:35%; margin-top: 5%; padding-left: 2%; padding-right: 2%; padding-bottom: 1%;">
         <div class="font-weight-bold" style="text-align: center; font-size: 36px; padding: 8%">Log in to Tri-Lo</div>
         <div class= "form-row align-items-center">
             <label for="username">Username/Email Address</label>
