changed search icon

--- a/frontend/homepage.html
+++ b/frontend/homepage.html
@@ -89,7 +89,7 @@
         <div class="input-group">
           <input type="email" class="form-control" size="50" placeholder="Address, Neighborhood, City, or ZipCode" required>
           <div class="input-group-btn">
-            <button type="button" class="btn btn-primary">Search</button>
+            <button type="button" class="btn btn-dark"><i class="material-icons"> search </i></button>
           </div>
         </div>
       </form>
