--- a/frontend/login.html
+++ b/frontend/login.html
@@ -12,6 +12,10 @@
 
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+        
+        <script src="js/loginScripts.js"></script>
+        <script src="js/scripts.js"></script>
+
         <title>Tri-lo</title>
         <style>
             body {
@@ -26,9 +30,9 @@
             .card {
                 position: relative;
             }
-            .active{
-                background-color: black;
-            }
+                .active{
+                    background-color: black;
+                }
             .container {
                 position: absolute;
                 text-align: center;
@@ -52,34 +56,35 @@
             }
         </style>
     </head>
-
-    <nav class="navbar navbar-expand fixed-top lg navbar-dark">
-        <a class="navbar-brand" href="#">Tri-lo</a>
-        <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-              </li>
-            </ul>
-        </div>
-        <div class="navbar-nav active">
-            <a class="nav-link" href="#"><span class="material-icons" style="font-size: 1rem; transform: translate(0,10%);">login</span>Login <span class="sr-only">(current)</span></a>
-        </div>
-    </nav>
-    <div class="card mb-3 col-auto centered" style="position: absolute; width: 28%; left:35%; margin-top: 5%; padding-left: 2%; padding-right: 2%; padding-bottom: 1%;">
-        <div class="font-weight-bold" style="text-align: center; font-size: 36px; padding: 8%">Log in to Tri-Lo</div>
-        <div class= "form-row align-items-center">
-            <label for="username">Username/Email Address</label>
-            <div style="width: 100%;">
-                <input type="text" class="form-control mb-2" id="username" placeholder="">
+    <body onload="setEventListeners()">
+        <nav class="navbar navbar-expand fixed-top lg navbar-dark">
+            <a class="navbar-brand" href="#">Tri-lo</a>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav mr-auto" id="home">
+                  <li class="nav-item" >
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                  </li>
+                </ul>
             </div>
-            <label for="password">Password</label>
-            <div style="width: 100%;">
-                <input type="password" class="form-control mb-2" id="password" placeholder="">
+            <div class="navbar-nav mr-auto active" id= "login">
+                <a class="nav-link" href="#"><span class="material-icons" style="font-size: 1rem; transform: translate(0,10%);">login</span>Login <span class="sr-only">(current)</span></a>
             </div>
+          </nav>
+        <div class="card mb-3 col-auto centered" style="position: absolute; width: 28%; left:35%; margin-top: 5%; padding-left: 2%; padding-right: 2%; padding-bottom: 1%;">
+            <div class="font-weight-bold" style="text-align: center; font-size: 36px; padding: 8%">Log in to Tri-Lo</div>
+            <div class= "form-row align-items-center">
+                <label for="username">Username/Email Address</label>
+                <div style="width: 100%;">
+                    <input type="text" class="form-control mb-2" id="username" placeholder="">
+                </div>
+                <label for="password">Password</label>
+                <div style="width: 100%;">
+                    <input type="password" class="form-control mb-2" id="password" placeholder="">
+                </div>
+            </div>
+            <a href="#" class="btn btn-dark" style="width: 100%">Login</a>
+            <a href="#" class="btn btn-light" style="width: 100%">Sign up</a>
+            <a href="#" class="btn btn-link" style="width: 100%">Forgot Password?</a>
         </div>
-        <a href="#" class="btn btn-dark" style="width: 100%">Login</a>
-        <a href="#" class="btn btn-light" style="width: 100%">Sign up</a>
-        <a href="#" class="btn btn-link" style="width: 100%">Forgot Password?</a>
-    </div>
+    </body>
 </html>
