--- a/frontend/login.html
+++ b/frontend/login.html
@@ -72,6 +72,7 @@
         </nav>
         <div class="card mb-3 col-auto centered" style="position: absolute; width: 28%; left:35%; margin-top: 5%; padding-left: 2%; padding-right: 2%; padding-bottom: 1%;">
             <div class="font-weight-bold" style="text-align: center; font-size: 36px; padding: 8%">Log in to Tri-Lo</div>
+            <p style="color: red; font-size: 10pt; padding:0%;" id="alertBox"> </p>
             <div class= "form-row align-items-center">
                 <label for="username">Username/Email Address</label>
                 <div style="width: 100%;">
