added first and last name

--- a/signup.html
+++ b/signup.html
@@ -69,6 +69,16 @@
     <div class="card mb-3 col-auto centered" style="position: absolute; width: 28%; left:35%; margin-top: 5%; padding-left: 2%; padding-right: 2%; padding-bottom: 1%;">
         <div class="font-weight-bold" style="text-align: center; font-size: 36px; padding: 8%">Sign up for Tri-Lo</div>
         <div class= "form-row align-items-center">
+            <label for="fname" style="float:left; width: 50%;">First Name</label>
+            <label for="lname" style="float:right; width: 50%;">Last Name</label>
+            <div style="width: 45%; float:left;">
+                <input type="text" class="form-control mb-2" id="fname" placeholder="">
+            </div>
+            <div style = "width:5%;float:left;"> </div>
+            <div style="width: 45%; float:right;">
+                <input type="text" class="form-control mb-2" id="lname" placeholder="">
+            </div>
+        
             <label for="username">Username</label>
             <div style="width: 100%;">
                 <input type="text" class="form-control mb-2" id="username" placeholder="">
