--- a/frontend/group.html
+++ b/frontend/group.html
@@ -14,7 +14,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
         
         <script src="js/scripts.js"></script>
-        <script src="js/profile.js"></script>
+        <script src="js/group.js"></script>
 
         <title>Tri-lo</title>
         <style>
@@ -79,64 +79,28 @@
                 <div class="col-md-2" style="border-right: 1px solid #333;margin-right: 1%; padding:0">
                     <ul class="nav flex-column" id= "profilePageLinks">
                         <li class="nav-item">
-                          <a class="nav-link active" href="#">Account Settings</a>
+                            <a class="nav-link" href="#">Account Settings</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Group</a>
+                            <a class="nav-link active" href="#">Group</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Bookmarked Listings</a>
+                            <a class="nav-link" href="#">Bookmarked Listings</a>
                         </li>
-                      </ul>
+                        </ul>
                 </div>
                 <div class= "col-md-9" id="texts"> 
-                    <div class = "jumbotron jumbotron-fluid">
-                        <div class = "container-fluid" style="min-height: 200px;">
-                            <div style="float: left;">
-                                <img src="sisman.png" class="rounded-circle circle-button" style="height: 200px; width: 200px;" id="profilePicture">
-                                <input type="file" class="form-control-file" id="pictureUpload">
-                            </div>
-                            <div class="lead">
-                                Name:
-                                <div style="float: right;">
-                                    <div class="btn btn-dark">
-                                        Edit
-                                    </div>
-                                </div>
-                            </div>
-                            <div id="nameField">
-                            </div>
-                            <div class="lead">
-                                Username:
-                                <div style="float: right;">
-                                    <div class="btn btn-dark">
-                                        Edit
-                                    </div>
-                                </div>
-                            </div>
-                            <div id="usernameField">
-                            </div>
-                            <div class="lead">
-                                Email:
-                                <div style="float: right;">
-                                    <div class="btn btn-dark">
-                                        Edit
-                                    </div>
-                                </div>
-                            </div>
-                            <div id="emailField">
-                                
-                            </div>
-                            <div class="lead" style="margin-top: 3%;">
-                                Password:
-                            </div>
-                            <div>
-                                <div class="btn btn-dark">
-                                    Change Password
-                                </div>
-                            </div>
+                    <div class = "jumbotron jumbotron-fluid" style="padding-top: 2%">
+                        <div id ="addMemberDiv" style="min-height: 0; margin-top:0; padding-left: 2%;">
+                        </div>
+                        <div class = "container-fluid" style="min-height: 200px;" id="groupContainer">
+                            <ul class = "list-group" id="groupList">
+                            </ul>
                         </div>
                     </div>
+                    <button type="button" class="btn btn-danger">
+                        Leave Group
+                    </button>
                 </div>
             </div>
         </div>
