made a circle clickable lmao

--- a/frontend/listing_search.html
+++ b/frontend/listing_search.html
@@ -74,6 +74,13 @@
         height:100px;
       float:left;
   }
+    .dot {
+      height: 25px;
+      width: 25px;
+      background-color: #bbb;
+      border-radius: 50%;
+      display: inline-block;
+  }
 
     
         </style>
@@ -179,14 +186,11 @@
       </div>
         <div style="text-align: center">
           Pages
-            <div style="float:left;">&nbsp;</div>
-            <a href="#">1</a>
-            <div style="float:left;">&nbsp;</div>
-            <a href="#">2</a>
-            <div style="float:left;">&nbsp;</div>
-            <a href="#">3</a>
-            <div style="float:left;">&nbsp;</div>
-          <a href="#">4</a>
+            <a href="#" style="margin: 1px;"><span class="dot">1</span></a>
+            <a href="#" style="margin: 1px;"><span class="dot">2</span></a>
+            <a href="#" style="margin: 1px;"><span class="dot">3</span></a>
+            <a href="#" style="margin: 1px;"><span class="dot">4</span></a>
+            <a href="#" style="margin: 1px;"><span class="dot">></span></a>
     </div>
     </div>
     
