--- a/frontend/group.html
+++ b/frontend/group.html
@@ -79,7 +79,7 @@
                 <div class="col-md-2" style="border-right: 1px solid #333;margin-right: 1%; padding:0">
                     <ul class="nav flex-column" id= "profilePageLinks">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Account Settings</a>
+                            <a class="nav-link" href="profile-Account.html">Account Settings</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="#">Group</a>
@@ -91,6 +91,9 @@
                 </div>
                 <div class= "col-md-9" id="texts"> 
                     <div class = "jumbotron jumbotron-fluid" style="padding-top: 2%">
+                        <div class="lead" style="margin-left: 2%;font-size: 32pt;margin-bottom: 2%;">
+                            Group
+                        </div>
                         <div id ="addMemberDiv" style="min-height: 0; margin-top:0; padding-left: 2%;">
                         </div>
                         <div class = "container-fluid" style="min-height: 200px;" id="groupContainer">
