--- a/frontend/profile-Account.html
+++ b/frontend/profile-Account.html
@@ -82,7 +82,7 @@
                           <a class="nav-link active" href="#">Account Settings</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Group</a>
+                          <a class="nav-link" href="group.html">Group</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="#">Bookmarked Listings</a>
