added listener to leave group button

--- a/frontend/group.html
+++ b/frontend/group.html
@@ -101,7 +101,7 @@
                             </ul>
                         </div>
                     </div>
-                    <button type="button" class="btn btn-danger">
+                    <button type="button" class="btn btn-danger" id="leaveBtn">
                         Leave Group
                     </button>
                 </div>
