--- a/frontend/listing_search.html
+++ b/frontend/listing_search.html
@@ -192,7 +192,9 @@
             <a href="#" style="margin: 1px;"><span class="dot">2</span></a>
             <a href="#" style="margin: 1px;"><span class="dot">3</span></a>
             <a href="#" style="margin: 1px;"><span class="dot">4</span></a>
-            <a href="#" style="margin: 1px;"><span class="dot">></span></a>
+            <a href="#" style="margin: 1px;"><span class="dot"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-right-short" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8z"/>
+</svg></span></a>
     </div>
     </div>
     
