--- a/frontend/bookmarkedListings.html
+++ b/frontend/bookmarkedListings.html
@@ -14,8 +14,8 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
         
         <script src="js/scripts.js"></script>
-        <script src="js/group.js"></script>
         <script src="js/loginScript.js"></script>
+        <script src="js/bookmarked.js"></script>
 
         <title>Tri-lo</title>
         <style>
@@ -54,50 +54,57 @@
     <nav class="navbar navbar-expand fixed-top lg navbar-dark">
         <a class="navbar-brand" href="#">Tri-lo</a>
         <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav mr-auto" id="home">
               <li class="nav-item">
-                <a class="nav-link" href="#" id="home">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
               </li>
             </ul>
         </div>
-        <div id="rightNavButton">
+        <div id ="rightNavButton">
             <div class="navbar-nav mr-auto" id= "login">
                 <a class="nav-link" href="#"><span class="material-icons" style="font-size: 1rem; transform: translate(0,10%);">login</span>Login <span class="sr-only">(current)</span></a>
             </div>
         </div>
     </nav>
-    
-    <body onload="doOnLoad();tryLogIn();setEventListeners();">
+    <body onload="setEventListeners();login();doOnLoad();">
         <div class="container-fluid" style="margin-top: 2%;">
             <div class="row">
                 <div class="col-md-2" style="border-right: 1px solid #333;margin-right: 1%; padding:0">
                     <ul class="nav flex-column" id= "profilePageLinks">
                         <li class="nav-item">
-                            <a class="nav-link" href="profile-Account.html">Account Settings</a>
+                          <a class="nav-link" href="profile-Account.html">Account Settings</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Group</a>
+                          <a class="nav-link" href="group.html">Group</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="bookmarkedListings.html">Bookmarked Listings</a>
+                          <a class="nav-link active" href="#">Bookmarked Listings</a>
                         </li>
-                        </ul>
+                      </ul>
                 </div>
                 <div class= "col-md-9" id="texts"> 
-                    <div class = "jumbotron jumbotron-fluid" style="padding-top: 2%">
-                        <div class="lead" style="margin-left: 2%;font-size: 32pt;margin-bottom: 2%;">
-                            Group
-                        </div>
-                        <div id ="addMemberDiv" style="min-height: 0; margin-top:0; padding-left: 2%;">
-                        </div>
-                        <div class = "container-fluid" style="min-height: 200px;" id="groupContainer">
-                            <ul class = "list-group" id="groupList">
+                    <div class = "jumbotron jumbotron-fluid" style="padding-top: 2%;">
+                        <div class = "container-fluid" style="min-height: 200px;">
+                            <div class="dropdown">
+                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                  Collections
+                                </button>
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" style="margin-top: 0%;">
+                                  <a class="dropdown-item active" href="#">Collection 1</a>
+                                  <a class="dropdown-item" href="#">Collection 2</a>
+                                </div>
+                              </div>
+                            <ul class="list-group" id="bookmarkedGroup" style="padding-top: 2%;">
+                                <li class="list-group-item btn">
+                                    <img src ="https://i.pinimg.com/originals/9f/5d/59/9f5d59bdf91e1d660c0e823795445bfa.jpg" style="width: 320px; height: 180px; float:left">
+                                    <header class="lead" style="font-size: 24pt; float: left; margin-left: 2%; text-align: left;">44 8th St<br> Troy, NY 12180 <br> $999,999,999,999 /yr</header>
+                                    <button type="button" class="close" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </li>
                             </ul>
                         </div>
                     </div>
-                    <button type="button" class="btn btn-danger" id="leaveBtn">
-                        Leave Group
-                    </button>
                 </div>
             </div>
         </div>
