--- a/frontend/listing_search.html
+++ b/frontend/listing_search.html
@@ -19,7 +19,7 @@
             body {
                 background-color: white;
                 width:100%;
-                heigth:100%;
+                height:100%;
             }
             /* Remove the navbar's default margin-bottom and rounded borders */ 
             .navbar {
