--- a/frontend/profile-Account.html
+++ b/frontend/profile-Account.html
@@ -15,7 +15,7 @@
         
         <script src="js/scripts.js"></script>
         <script src="js/profile.js"></script>
-
+        <script src="js/loginScript.js"></script>
         <title>Tri-lo</title>
         <style>
             body {
@@ -53,27 +53,20 @@
     <nav class="navbar navbar-expand fixed-top lg navbar-dark">
         <a class="navbar-brand" href="#">Tri-lo</a>
         <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav mr-auto" id="home">
               <li class="nav-item">
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
               </li>
             </ul>
         </div>
-        <div class="navbar-nav active">
-            <div class="dropdown">
-                <button class="btn dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style ="background-color: #222222; color:white;"id="profileNavButton">
-                  You're a donkey
-                </button>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profileNavButton">
-                    <button class="dropdown-item" type="button">Settings</button>
-                    <button class="dropdown-item" type="button">Group</button>
-                    <button class="dropdown-item" type="button">Bookmarked Listings</button>
-                </div>
+        <div id="rightNavButton">
+            <div class="navbar-nav mr-auto" id= "login">
+                <a class="nav-link" href="#"><span class="material-icons" style="font-size: 1rem; transform: translate(0,10%);">login</span>Login <span class="sr-only">(current)</span></a>
             </div>
         </div>
     </nav>
     
-    <body onload="doOnLoad();">
+    <body onload="setEventListeners();doOnLoad();tryLogIn();">
         <div class="container-fluid" style="margin-top: 2%;">
             <div class="row">
                 <div class="col-md-2" style="border-right: 1px solid #333;margin-right: 1%; padding:0">
@@ -85,7 +78,7 @@
                           <a class="nav-link" href="group.html">Group</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Bookmarked Listings</a>
+                          <a class="nav-link" href="bookmarkedListings.html">Bookmarked Listings</a>
                         </li>
                       </ul>
                 </div>
