changed the titles lmao

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -16,7 +16,7 @@
         <script src="js/loginScripts.js"></script>
         <script src="js/scripts.js"></script>
 
-        <title>Tri-lo</title>
+        <title>Login</title>
         <style>
             body {
                 background-color: #363232;
