--- a/frontend/profile-Account.html
+++ b/frontend/profile-Account.html
@@ -16,7 +16,7 @@
         <script src="js/scripts.js"></script>
         <script src="js/profile.js"></script>
 
-        <title>Tri-lo</title>
+        <title>Profile</title>
         <style>
             body {
                 background-color: white;
