--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -16,7 +16,7 @@
         <script src="js/scripts.js"></script>
         <script src="js/signupScripts.js"></script>
 
-        <title>Tri-lo</title>
+        <title>Signup</title>
         <style>
             body {
                 background-color: #363232;
