more align and add pic on bottom?

--- a/frontend/exlistpage.html
+++ b/frontend/exlistpage.html
@@ -40,7 +40,8 @@
     </nav>
     <div class="container-fluid col-md-9" style= "margin-top: 15px;">
 
-        <div id="carouselExampleControls" class="carousel slide col-md-6 float-left" data-ride="carousel">
+        <div class="col-md-6 float-left">
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img class="d-block w-100" src="https://i.imgur.com/S7cTEgw.png" alt="First slide">
@@ -58,6 +59,16 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
             </a>
+        </div>
+        <style>
+            .meme{
+                display: inline-block;
+            }
+        </style>
+        <div id="buttonslides" class="meme d-flex justify-content-center">
+            <button class="btn border col-md-3"><img src="https://i.imgur.com/S7cTEgw.png" style="width:100%; float:left;"></button>
+            <button class="btn border col-md-3"><img src="https://rpiathletics.com/images/2020/6/30/Campus.jpg?width=1920&quality=80&format=jpg" style="width:100%; float:left;"></button>
+        </div>
         </div>
         <div class = "container-fluid col-md-3 float-left"> 
 
