--- a/frontend/exlistpage.html
+++ b/frontend/exlistpage.html
@@ -12,6 +12,7 @@
 
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+        <script src="js/scripts.js"></script>
         <title>empac</title>
         <style>
             body {
@@ -24,17 +25,17 @@
             }
         </style>
     </head>
-
+    <body onload="setEventListeners();">
     <nav class="navbar navbar-expand fixed-top lg navbar-dark">
         <a class="navbar-brand" href="#">Tri-lo</a>
         <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item">
+            <ul class="navbar-nav mr-auto" id="home">
+              <li class="nav-item" >
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
               </li>
             </ul>
         </div>
-        <div class="navbar-nav active">
+        <div class="navbar-nav mr-auto" id= "login">
             <a class="nav-link" href="#"><span class="material-icons" style="font-size: 1rem; transform: translate(0,10%);">login</span>Login <span class="sr-only">(current)</span></a>
         </div>
     </nav>
@@ -156,5 +157,6 @@
         
 
         </div>
-    
+    </div>
+    </body>
 </html>
