added button functionality and some tracking

--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -84,13 +84,13 @@
                     <input type="text" class="form-control mb-2" id="lname" placeholder="">
                 </div>
                 <div class="btn-group col-md-12" style="margin-left:-5px;">
-                    <button class="btn dropdown-toggle font-weight-light dropdown-toggle-split bg-light border" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="margin-top: 15px; color: black; border: 1px black; font-size: 17px; padding: 10px;">Account Type:&nbsp;
+                    <button class="btn dropdown-toggle font-weight-light dropdown-toggle-split bg-light border" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="margin-top: 15px; color: black; border: 1px black; font-size: 17px; padding: 10px;" id="atype">Account Type:&nbsp;
                     <span class="sr-only">Toggle Dropdown</span>
                     </button>
                     <div class="dropdown-menu col-md-12" style="text-align:center;">
-                        <a class="dropdown-item" href="#">Client</a>
-                        <a class="dropdown-item" href="#">Landlord</a>
-                        <a class="dropdown-item" href="#">Agent</a>
+                        <a class="dropdown-item" href="#" id="clienta">Client</a>
+                        <a class="dropdown-item" href="#" id="llda">Landlord</a>
+                        <a class="dropdown-item" href="#" id="agenta">Agent</a>
                     </div>
                 </div>
                 <label for="username">Username</label>
