--- a/frontend/bookmarkedListings.html
+++ b/frontend/bookmarkedListings.html
@@ -72,7 +72,7 @@
                 <div class="col-md-2" style="border-right: 1px solid #333;margin-right: 1%; padding:0">
                     <ul class="nav flex-column" id= "profilePageLinks">
                         <li class="nav-item">
-                          <a class="nav-link" href="profile-Account.html">Account Settings</a>
+                          <a class="nav-link" href="profilePage.html">Account Settings</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="group.html">Group</a>
