edited javiers listing_search version

--- a/frontend/listing_search.html
+++ b/frontend/listing_search.html
@@ -125,15 +125,32 @@
         </div>
 
     <div class="btn-group">
-        <button type="button" class="btn dropdown-toggle font-weight-light dropdown-toggle-split bg-dark" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="margin-left: 5px; color: white; border: 1px black; font-size: 17px; padding: 10px;">Bedrooms
+        <button type="button" class="btn dropdown-toggle font-weight-light dropdown-toggle-split bg-dark" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="margin-left: 5px; color: white; border: 1px black; font-size: 17px; padding: 10px;">Rooms
         <span class="sr-only">Toggle Dropdown</span>
         </button>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Any</a>
-            <a class="dropdown-item" href="#">1+</a>
-            <a class="dropdown-item" href="#">2+</a>
-            <!--need to add class names to input types or maybe not, idk in order to get values-->
-            <a class="dropdown-item" href="#"><input type ="text" placeholder="Low" style="width:45%">-<input type ="text" placeholder="High" style="width:55%"></a>
+          <div class = "container-fluid">
+            Bedrooms
+            <div class="btn-group">
+              <a class="dropdown-item bg-light border rounded" href="#" style="">Any</a>
+              <a class="dropdown-item bg-light border rounded" href="#">1+</a>
+              <a class="dropdown-item bg-light border rounded" href="#">2+</a>
+              <a class="dropdown-item bg-light border rounded" href="#">3+</a>
+              <a class="dropdown-item bg-light border rounded" href="#">4+</a>
+            </div>
+          </div>
+          </br>
+          <div class = "container-fluid">
+            Bathrooms
+            <div class="btn-group">
+              <a class="dropdown-item bg-light border rounded" href="#">Any</a>
+              <a class="dropdown-item bg-light border rounded" href="#">1+</a>
+              <a class="dropdown-item bg-light border rounded" href="#">2+</a>
+              <a class="dropdown-item bg-light border rounded" href="#">3+</a>
+              <a class="dropdown-item bg-light border rounded" href="#">4+</a>
+            </div>
+          </div>
+          <!--need to add class names to input types or maybe not, idk in order to get values-->
         </div>
         </div>
   
@@ -147,7 +164,6 @@
         </div>
       </div>
 
-      <button type="button" class="btn btn-danger bg-dark font-weight-light" style="margin-left: 5px; border: 1px black; font-size: 17px; padding: 10px; border-left:none;">Save search</button>
       </div>
         
     <br> <!--- needed a break for some reason lmao--->
