--- a/frontend/bookmarkedListings.html
+++ b/frontend/bookmarkedListings.html
@@ -66,7 +66,7 @@
             </div>
         </div>
     </nav>
-    <body onload="setEventListeners();login();doOnLoad();">
+    <body onload="setEventListeners();tryLogIn();doOnLoad();">
         <div class="container-fluid" style="margin-top: 2%;">
             <div class="row">
                 <div class="col-md-2" style="border-right: 1px solid #333;margin-right: 1%; padding:0">
