--- a/frontend/group.html
+++ b/frontend/group.html
@@ -67,7 +67,7 @@
         </div>
     </nav>
     
-    <body onload="doOnLoad();tryLogIn();setEventListeners();">
+    <body onload="setEventListeners();tryLogIn();doOnLoad();">
         <div class="container-fluid" style="margin-top: 2%;">
             <div class="row">
                 <div class="col-md-2" style="border-right: 1px solid #333;margin-right: 1%; padding:0">
