--- a/frontend/homepage.html
+++ b/frontend/homepage.html
@@ -72,7 +72,10 @@
       background-color: black;
     }
     </style>
-    <body onload="setEventListeners(); tryLogIn(); setHomepageEventListeners();">
+    <body onload="setEventListeners();tryLogIn(); setHomepageEventListeners();">
+      <script >
+        document.cookie="SameSite=None;";
+      </script>
       <nav class="navbar navbar-expand fixed-top lg navbar-dark">
         <a class="navbar-brand" href="#">Tri-lo</a>
         <div class="collapse navbar-collapse" id="navbarText">
@@ -90,7 +93,7 @@
       </nav>
 
       <div class="jumbotron jumbotron-fluid text-center">
-        <img src="https://i.imgur.com/S7cTEgw.png" alt ="sis-man on the clock" style="width:100%;">
+        <img src="homeScreen.png" alt ="sis-man on the clock" style="width:100%;">
         <div class="centered">Tri-lo</div>
         <form class="form-inline">
           <div class="input-group">
