--- a/frontend/profilePage.html
+++ b/frontend/profilePage.html
@@ -67,7 +67,7 @@
         </div>
     </nav>
     
-    <body onload="setEventListeners();doOnLoad();tryLogIn();">
+    <body onload="setEventListeners();tryLogIn();doOnLoad();">
         <div class="container-fluid" style="margin-top: 2%;">
             <div class="row">
                 <div class="col-md-2" style="border-right: 1px solid #333;margin-right: 1%; padding:0">
@@ -121,7 +121,7 @@
                             <div id="emailField">
                                 
                             </div>
-                            <div class="lead" style="margin-top: 3%;">
+                            <div class="lead" style="margin-top: 3%; margin-bottom: 1%;">
                                 Password:
                             </div>
                             <div>
