--- a/frontend/listing_search.html
+++ b/frontend/listing_search.html
@@ -15,6 +15,7 @@
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
         
+        <script src="js/listingSearchScript.js"></script>
         <script src="js/scripts.js"></script>
         <title>Search</title>
         <style>
@@ -87,7 +88,7 @@
         </style>
         
     </head>
-    <body onload="setEventListeners();">
+    <body onload="setEventListeners(); setListingSearchEventListeners();">
     <nav class="navbar navbar-expand fixed-top lg navbar-dark">
         <a class="navbar-brand" href="#">Tri-lo</a>
         <div class="collapse navbar-collapse" id="navbarText">
@@ -132,7 +133,7 @@
           <div class = "container-fluid">
             Bedrooms
             <div class="btn-group">
-              <a class="dropdown-item bg-light border rounded" href="#" style="">Any</a>
+              <a class="dropdown-item bg-light border rounded" href="#">Any</a>
               <a class="dropdown-item bg-light border rounded" href="#">1+</a>
               <a class="dropdown-item bg-light border rounded" href="#">2+</a>
               <a class="dropdown-item bg-light border rounded" href="#">3+</a>
