--- a/frontend/listing_create.html
+++ b/frontend/listing_create.html
@@ -46,16 +46,28 @@
             </h1>
             
             <label for="lname">Listing Name:</label>
-            <div style="width: 100%;">
+            <div style="width: 75%;">
                 <input type="text" class="form-control mb-2" id="lname" placeholder="My Listing">
             </div>
 
             <label for="addr">Property Address:</label>
-            <div style="width: 100%;">
-                <input type="text" class="form-control mb-2" id="addr" placeholder="">
+            <div style="width: 75%;">
+                <input type="text" class="form-control mb-2" id="addr" placeholder="Street Address">
+            </div>
+            <div class="row" style="padding-left: 15px; padding-bottom: 30px;">
+            <div style="width: 25%; float:left;">
+                <input type="text" class="form-control mb-2" id="city" placeholder="City">
+            </div>
+            <div style="width: 25%; float: left; margin-left: 2%;">
+                <input type="text" class="form-control mb-2" id="state" placeholder="State">
+            </div>
+            <div style="width: 20%; float: left; margin-left: 2%;">
+                <input type="text" class="form-control mb-2" id="zipc" placeholder="Zip Code">
+            </div>
             </div>
 
-            <label style="width: 100%;">Contact Info:</label>
+
+            <h2>Contact Info:</h2>
 
             <label>Landlord Name:</label>
             <div style="width: 30%;">
