fixed it a little bit

--- a/frontend/listing_create.html
+++ b/frontend/listing_create.html
@@ -50,19 +50,28 @@
                 <input type="text" class="form-control mb-2" id="lname" placeholder="My Listing">
             </div>
 
-            <label for="addr">Property Address:</label>
+            <h3>Property Address:</h3>
+            <label for="addr">Street Address: </label>
             <div style="width: 75%;">
-                <input type="text" class="form-control mb-2" id="addr" placeholder="Street Address">
+                <input type="text" class="form-control mb-2" id="addr" placeholder="">
+            </div>
+            <div class="row" style="padding-left: 15px;">
+                <label for="city" style="width: 25%;">City:
+                </label>
+                <label for="state" style="width:25%; margin-left: 2%;">State:
+                </label>
+                <label for="zipc" style="width: 20%; margin-left: 2%;">Zip Code:
+                </label>
             </div>
             <div class="row" style="padding-left: 15px; padding-bottom: 30px;">
             <div style="width: 25%; float:left;">
-                <input type="text" class="form-control mb-2" id="city" placeholder="City">
+                <input type="text" class="form-control mb-2" id="city" placeholder="">
             </div>
             <div style="width: 25%; float: left; margin-left: 2%;">
-                <input type="text" class="form-control mb-2" id="state" placeholder="State">
+                <input type="text" class="form-control mb-2" id="state" placeholder="">
             </div>
             <div style="width: 20%; float: left; margin-left: 2%;">
-                <input type="text" class="form-control mb-2" id="zipc" placeholder="Zip Code">
+                <input type="text" class="form-control mb-2" id="zipc" placeholder="">
             </div>
             </div>
 
