fixed it a little bit

--- a/frontend/listing_create.html
+++ b/frontend/listing_create.html
@@ -46,7 +46,7 @@
             </h1>
             
             <label for="lname">Listing Name:</label>
-            <div style="width: 75%;">
+            <div style="width: 75%; padding-bottom: 15px;">
                 <input type="text" class="form-control mb-2" id="lname" placeholder="My Listing">
             </div>
 
@@ -78,7 +78,7 @@
 
             <h2>Contact Info:</h2>
 
-            <label>Landlord Name:</label>
+            <label style="padding-top: 5px;">Landlord Name:</label>
             <div style="width: 30%;">
                 <input type="text" class="form-control mb-2" id="lldname" placeholder="John Doe">
             </div>
