--- a/frontend/listing_create.html
+++ b/frontend/listing_create.html
@@ -51,7 +51,7 @@
             </div>
 
             <h3>Property Address:</h3>
-            <label for="addr">Street Address: </label>
+            <label for="addr" style="padding-top: 5px;">Street Address: </label>
             <div style="width: 75%;">
                 <input type="text" class="form-control mb-2" id="addr" placeholder="">
             </div>
