--- a/frontend/listing_create.html
+++ b/frontend/listing_create.html
@@ -98,8 +98,8 @@
             <div class="row" style="padding-left: 15px;">
             
             <div style="width: 20%; float:left;">
-                <input type="text" class="form-control mb-2" id="hotline" placeholder="(xxx)-xxx-xxxx">
-                <div style="color:red;" id = "checkhotline"></div> <!--Please enter a valid phone number.-->
+                <input type="text" class="form-control mb-2" id="phoneno" placeholder="(xxx)-xxx-xxxx">
+                <div style="color:red;" id = "checkphoneno"></div> <!--Please enter a valid phone number.-->
             </div>
             <div style="width: 40%; float:left; margin-left: 15px;">
                 <input type="text" class="form-control mb-2" id="lemail" placeholder="user@email.com">
