Provided functionality on Add Amenity button, still need to track ids

--- a/frontend/listing_create.html
+++ b/frontend/listing_create.html
@@ -46,10 +46,9 @@
             <h1>Create a Listing:
             </h1>
             
-            <label for="lname">Listing Name:</label>
-            <div style="width: 75%; padding-bottom: 15px;">
+            <label for="lname" style="width:75%; padding-bottom: 5px;">Listing Name:
                 <input type="text" class="form-control mb-2" id="lname" placeholder="My Listing">
-            </div>
+            </label>
 
 
             <h3>Property Address:</h3>
@@ -175,102 +174,10 @@
             </div>
             <div class="row" style="margin-left: 0px;">
             <div style="width: 15%; float:left;">
-                <input type="text" class="form-control mb-2" id="amen3t" placeholder="">
+                <input type="text" class="form-control mb-2" id="amen3t">
             </div>
             <div style="width: 30%; float:left; margin-left: 15px;">
                 <input type="text" class="form-control mb-2" id="amen3d" placeholder="">
-            </div>
-            </div>
-
-
-            <div class="row" style="margin-left: 0px;">
-            <label for="amen4t" style="width: 15%;"></label>                                <!--put Type: here-->
-            <label for="amen4d" style="width:15%; margin-left: 15px;"></label>              <!--put Description: here-->
-            </div>
-            <div class="row" style="margin-left: 0px;">
-            <div style="width: 15%; float:left;">
-                                                                                        <!--<input type="text" class="form-control mb-2" id="amen4t" placeholder="">-->
-            </div>
-            <div style="width: 30%; float:left; margin-left: 15px;">
-                                                                                        <!--<input type="text" class="form-control mb-2" id="amen4d" placeholder="">-->
-            </div>
-            </div>
-
-            <div class="row" style="margin-left: 0px;">
-            <label for="amen5t" style="width: 15%;"></label>                                <!--put Type: here-->
-            <label for="amen5d" style="width:15%; margin-left: 15px;"></label>              <!--put Description: here-->
-            </div>
-            <div class="row" style="margin-left: 0px;">
-            <div style="width: 15%; float:left;">
-                                                                                        <!--<input type="text" class="form-control mb-2" id="amen5t" placeholder="">-->
-            </div>
-            <div style="width: 30%; float:left; margin-left: 15px;">
-                                                                                        <!--<input type="text" class="form-control mb-2" id="amen5d" placeholder="">-->
-            </div>
-            </div>
-
-            <div class="row" style="margin-left: 0px;">
-            <label for="amen6t" style="width: 15%;"></label>                                <!--put Type: here-->
-            <label for="amen6d" style="width:15%; margin-left: 15px;"></label>              <!--put Description: here-->
-            </div>
-            <div class="row" style="margin-left: 0px;">
-            <div style="width: 15%; float:left;">
-                                                                                        <!--<input type="text" class="form-control mb-2" id="amen6t" placeholder="">-->
-            </div>
-            <div style="width: 30%; float:left; margin-left: 15px;">
-                                                                                        <!--<input type="text" class="form-control mb-2" id="amen6d" placeholder="">-->
-            </div>
-            </div>
-
-            <div class="row" style="margin-left: 0px;">
-            <label for="amen7t" style="width: 15%;"></label>                                <!--put Type: here-->
-            <label for="amen7d" style="width:15%; margin-left: 15px;"></label>              <!--put Description: here-->
-            </div>
-            <div class="row" style="margin-left: 0px;">
-            <div style="width: 15%; float:left;">
-                                                                                        <!--<input type="text" class="form-control mb-2" id="amen7t" placeholder="">-->
-            </div>
-            <div style="width: 30%; float:left; margin-left: 15px;">
-                                                                                        <!--<input type="text" class="form-control mb-2" id="amen7d" placeholder="">-->
-            </div>
-            </div>
-
-            <div class="row" style="margin-left: 0px;">
-            <label for="amen8t" style="width: 15%;"></label>                                <!--put Type: here-->
-            <label for="amen8d" style="width:15%; margin-left: 15px;"></label>              <!--put Description: here-->
-            </div>
-            <div class="row" style="margin-left: 0px;">
-            <div style="width: 15%; float:left;">
-                                                                                        <!--<input type="text" class="form-control mb-2" id="amen8t" placeholder="">-->
-            </div>
-            <div style="width: 30%; float:left; margin-left: 15px;">
-                                                                                        <!--<input type="text" class="form-control mb-2" id="amen8d" placeholder="">-->
-            </div>
-            </div>
-
-            <div class="row" style="margin-left: 0px;">
-            <label for="amen9t" style="width: 15%;"></label>                                <!--put Type: here-->
-            <label for="amen9d" style="width:15%; margin-left: 15px;"></label>              <!--put Description: here-->
-            </div>
-            <div class="row" style="margin-left: 0px;">
-            <div style="width: 15%; float:left;">
-                                                                                        <!--<input type="text" class="form-control mb-2" id="amen9t" placeholder="">-->
-            </div>
-            <div style="width: 30%; float:left; margin-left: 15px;">
-                                                                                        <!--<input type="text" class="form-control mb-2" id="amen9d" placeholder="">-->
-            </div>
-            </div>
-
-            <div class="row" style="margin-left: 0px;">
-            <label for="amen10t" style="width: 15%;"></label>                                <!--put Type: here-->
-            <label for="amen10d" style="width:15%; margin-left: 15px;"></label>              <!--put Description: here-->
-            </div>
-            <div class="row" style="margin-left: 0px;">
-            <div style="width: 15%; float:left;">
-                                                                                        <!--<input type="text" class="form-control mb-2" id="amen10t" placeholder="">-->
-            </div>
-            <div style="width: 30%; float:left; margin-left: 15px;">
-                                                                                        <!--<input type="text" class="form-control mb-2" id="amen10d" placeholder="">-->
             </div>
             </div>
 
@@ -282,8 +189,11 @@
 
             https://stackoverflow.com/questions/32540044/html-display-current-date/32540196
             -->
-
+            <div id="addBootonBox">
+                
+            </div>
             <button class="btn btn-secondary" id="aamen">Add Amenity</button>
+
             <br> 
             <button class="btn btn-primary float-right" id="clbutt">Create listing</button>
         </div>
