added dynamic phone number if landlord/agent

--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -103,6 +103,10 @@
                     <input type="text" class="form-control mb-2" id="email" placeholder="user@email.com">
                 </div>
                 <div style="font-size: 12px; color: gray; width: 100%;" id="emailReq">Please enter a valid email address</div>
+                
+                <div id ="enterphone" style="width: 100%;">
+                </div>
+                
                 <label for="password">Create new password</label>
                 <div style="width: 100%;">
                     <input type="password" class="form-control mb-2" id="password" placeholder="">
