--- a/frontend/listing_search.html
+++ b/frontend/listing_search.html
@@ -190,7 +190,7 @@
               </div>
               <div class="container" style="margin-left: 2%;">
                 <div class="form-group row" aria-labelledby="2to1">
-                  <div class="custom-control custom-checkbox">
+                  <div class="custom-control custom-checkbox" id ="customC">
                     <input type="checkbox" class="custom-control-input" id="customCheck1">
                     <label class="custom-control-label" for="customCheck1">2 Bedrooms : 1 Bathroom</label>
                   </div>
