--- a/frontend/listing_search.html
+++ b/frontend/listing_search.html
@@ -205,7 +205,7 @@
         
     <br> <!--- needed a break for some reason lmao--->
     
-    <div class="container-fluid">
+    <div class="container-fluid" style="padding-left: 30px;">
       Listing List (# of results)
       <div class="btn-group" style="margin-left: 5px;">
         <button type="button" class="btn dropdown-toggle dropdown-toggle-split bg-light font-weight-normal border" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: gray; border: 1px black; font-size: 17px; padding: 4px;">Sort by&nbsp;
