added images but need to find out how to post

--- a/frontend/listing_create.html
+++ b/frontend/listing_create.html
@@ -141,6 +141,11 @@
                 <input type="text" class="form-control mb-2" id="leaset" placeholder="">
                 <div style="color:red;" id = "checkleaset"></div> <!--Please enter an integer.-->
             </div>
+
+            <label>Listing Images</label>
+            <form><!--action="upload.php" method="post" enctype="multipart/form-data"-->
+                <input type="file" name="name" multiple id="housenoods">
+            </form>
             
             <label for="amen">Amenities: (max 100)</label> <label style="color: gray;">(optional)</label>
             <br>
