changed header type to support images, had to change how to append

--- a/frontend/listing_create.html
+++ b/frontend/listing_create.html
@@ -143,8 +143,8 @@
             </div>
 
             <label>Listing Images</label>
-            <form><!--action="upload.php" method="post" enctype="multipart/form-data"-->
-                <input type="file" name="name" multiple id="housenoods">
+            <form method = 'post' action = '' enctype='multipart/form-data'><!--action="upload.php" method="post" enctype="multipart/form-data"-->
+                <input type="file" name="files[]" multiple id="housenoods">
             </form>
             
             <label for="amen">Amenities: (max 100)</label> <label style="color: gray;">(optional)</label>
