added redirecting to login after success, and let form in search stay but still submit info

--- a/frontend/listing_search.html
+++ b/frontend/listing_search.html
@@ -102,7 +102,7 @@
     
     <div class = "container-fluid" style="padding-top: 10px;">
       <div class="first-bar">
-        <form class="example" action="action_page.php">
+        <form class="example" id = "searchbar">
           <div class="col-md-8">
             <input type="text" placeholder="Address, Neighborhood, City, or ZipCode" id="search" class="border font-weight-light">
             <button type="submit" class="submit bg-dark" style=""><i class="fa fa-search" style="color:white;"></i></button>
